--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,8 +9,10 @@
     "he": "^1.2.0",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
+    "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
