--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "react-timer-hook": "^3.0.5",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
